--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.16",
+    "@emailjs/browser": "^3.11.0",
+    "framer-motion": "^10.16.4",
+    "install": "^0.13.0",
     "next": "13.5.2",
-    "postcss": "8.4.30",
+    "npm": "^10.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-icons": "^4.11.0",
+    "typed.js": "^2.0.16"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.30",
+    "tailwindcss": "^3.3.3"
   }
 }
